	* control_table - fixed some bugs in how the control table rendered hashes rather than lists.

2013-09-17  Eric Wolf  <wolf@Talisman>

	* VERSION 0.1008
	* added --profiling option. This is a bit experimental and assumes you have Aspect installed. There is a new program, bin/perf_reader to analyze the output generated by the profiling. The perf output is to STDERR and is controlled by Yote::PerfAspect. I have not made Aspect a requirement of Yote yet, as this is not a core functionality of the program.
	* removed removed MongoDB requirements. This only applies if you want to use mongo, and the MongoDB installation is a pain in the neck. Am keeping the DBD::MySQL because it's not so big and bad.
	* is_master_root method. The initial account ( and it should only be this account ) cannot have root unset from it. This is a safety. Should __master_root and __is_root become unset, they will be reset for this account anytime the server starts up	
	* added CronEntry object for cron. Yote::Obj wasn't going to be enough - this must be editable.
	* Yote::ObjProvider::LOCK_MODE this is a very significant update as it changes how object locking happens. This can have 3 modes : LOCK_ON_WRITE, LOCK_NEVER and LOCK_ALWAYS. Yote had been locking all object access between the threads. Now I'm setting the default to be LOCK_ON_WRITE, though LOCK_NEVER is tempting too. As of this writing, the default can't be changed. This will be addressed in upcoming versions. Maybe the style should be that explicitly calling lock object. Maybe I will make Yote::ObjProvider::fetch_locked.
	* removed Yote::YoteRoot::is_root because that was based on a half baked idea.
	* admin.html changing this around to be more admin like. Sadly this is not finished, but the checkin will continue.
	* $.yote.util.check_edit( fld, checked_fun, unchecked_fun, extra_classes, on_edit_f ) - a new widget to make checkbox to control a boolean property of something.

2013-07-28  Eric Wolf  <eric@DobreDen>

	* VERSION 0.1007